--- a/AddressCrud/address.component.html
+++ b/AddressCrud/address.component.html
@@ -1,40 +1,47 @@
-<div style="width: 100" class="mat-elevation-z8">
+<mat-tab-group animationDuration="0ms" mat-align-tabs="center">
+  <mat-tab label="Single Address Crud">
+    <div style="width: 100" class="mat-elevation-z8">
 
 
-    <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
-  
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-  
-      <!-- ID Column -->
-      <ng-container *ngFor="let col of columns" matColumnDef={{col}}>
-        <mat-header-cell *matHeaderCellDef mat-sort-header>{{col}}</mat-header-cell>
-        <mat-cell *matCellDef="let row" >{{row[col]}}</mat-cell>
-      </ng-container>
-      
-      <ng-container matColumnDef="actions">
-        <mat-header-cell *matHeaderCellDef>
-          <button mat-icon-button color="primary" (click)="addNew()">
-            <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
-          </button>
-        </mat-header-cell>
-  
-        <mat-cell *matCellDef="let row; let i=index;">
-          <button mat-icon-button color="accent" (click)="startEdit(row)">
-            <mat-icon aria-label="Edit">edit</mat-icon>
-          </button>
-  
-          <button mat-icon-button color="accent" (click)="deleteItem(row)">
-            <mat-icon aria-label="Delete">delete</mat-icon>
-          </button>
-        </mat-cell>
-      </ng-container>
-  
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
-    <div class="no-results" [style.display]="dataSource.length == 0 ? '' : 'none'">
-      No results
+      <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
+    
+        <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+    
+        <!-- ID Column -->
+        <ng-container *ngFor="let col of columns" matColumnDef={{col}}>
+          <mat-header-cell *matHeaderCellDef mat-sort-header>{{col}}</mat-header-cell>
+          <mat-cell *matCellDef="let row" >{{row[col]}}</mat-cell>
+        </ng-container>
+        
+        <ng-container matColumnDef="actions">
+          <mat-header-cell *matHeaderCellDef>
+            <button mat-icon-button color="primary" (click)="addNew()">
+              <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
+            </button>
+          </mat-header-cell>
+    
+          <mat-cell *matCellDef="let row; let i=index;">
+            <button mat-icon-button color="accent" (click)="startEdit(row)">
+              <mat-icon aria-label="Edit">edit</mat-icon>
+            </button>
+    
+            <button mat-icon-button color="accent" (click)="deleteItem(row)">
+              <mat-icon aria-label="Delete">delete</mat-icon>
+            </button>
+          </mat-cell>
+        </ng-container>
+    
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+      <div class="no-results" [style.display]="dataSource.length == 0 ? '' : 'none'">
+        No results
+      </div>
+    
     </div>
-  
-  </div>
+  </mat-tab>
+  <mat-tab label="Bulk Upload">
+    <bulkAddCrud></bulkAddCrud>
+  </mat-tab>
+</mat-tab-group>
