--- a/AddressCrud/bulkAddUploading/bulkadd.component.css
+++ b/AddressCrud/bulkAddUploading/bulkadd.component.css
@@ -7,7 +7,11 @@
     border-radius: 5px;
     cursor: pointer;
     color:white;
-  }
-  input[type="file"]{
+}
+input[type="file"]{
     display:none;
+}
+
+.bulk_div{
+  margin: 15px 0px 15px 0px;
 }
