--- a/AddressCrud/bulkAddUploading/bulkadd.component.html
+++ b/AddressCrud/bulkAddUploading/bulkadd.component.html
@@ -1,8 +1,12 @@
 <div>
+
+<div class="bulk_div">
     <label class="custom-file-upload">
        Address File<input type="file" name="address" accept=".xlsx, .xls, .csv" (change)="OnChange(address)" #address >
     </label> 
 </div> 
-
-<button mat-raised-button class="uploadButton" [color]='primary' [disabled]="false" 
-                  (click)="uploadExcel()">Upload</button>
+<div class="bulk_div">
+        <button mat-raised-button class="uploadButton" [color]='primary' [disabled]="false" 
+        (click)="uploadExcel()">Upload</button>
+</div>
+</div>
